--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 apply from: "buildsystem/dependencies.gradle"
+apply from: 'buildsystem/common-methods.gradle'
+
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
