--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -5,13 +5,15 @@ allprojects {
     }
 }
 
-ext {
+project.ext {
     //Android libraries
     core_ktx_version = '1.3.2'
     app_compat_version = '1.2.0'
     constraintlayout_version = '2.0.2'
 
     //DI
-    koin_version = '2.0.1'
+    koin_version = '2.1.5'
+
+    baseUrl = "https://smarttv.orangetv.orange.es/stv/api/"
 
 }
