--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ android {
 }
 
 dependencies {
-    // Android
+    // Android libraries
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
@@ -90,8 +90,11 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
+    testImplementation "org.robolectric:robolectric:3.8"
+    testImplementation "com.nhaarman:mockito-kotlin:1.4.0"
+    testImplementation "org.amshove.kluent:kluent:1.14"
 
 }
 
